# DORA

./: .gitignore  DORA_Live_Kernel.py  README.md  dora_memory_bank.json  pyproject.toml  sara_mnist_v5.pth  setup_colab.sh  test_log.txt  test_simple_write.py  writer.py
app/: containers.py  dashboard.py  deployment.py  main.py
app/adapters/: snn_langchain_adapter.py
benchmarks/: __init__.py  dialogue_test.py  language_integration_test.py  memory_plasticity_test.py  motor_reflex_test.py  stability_benchmark.py  stability_benchmark_v2.py  visual_reflex_test.py
doc/: Architecture_Details.md  DORA_Project_Manifesto.md  DORA_Project_Structure.md  Future-Expansion-Plan.md  OS_Design_Document.md  Objective.md  ROADMAP.md  SARA Engine Architecture v12.0.md  SARA-Engine_Roadmap.md  SARA-Engine_Specification.md  SARA-Engine_Technical_Documentation.md  SARA_engine.md  SNNproject-structure.md  neuromorphic_research_os_設計方針書.md  test-command.md  training_and_inference.md  学習方法の実装状況と選択ガイド.md
runtime_state/: brain_activity.json  dashboard_data.json  experiment_history.json  memory_experiment_history.json
rust_kernel/: Cargo.toml  Rustツールチェーンビルド手順.txt
rust_kernel/src/: lib.rs
scripts/: run_inference.py  run_production.py
snn_research/io/: __init__.py  (+5 more)
tests/: test_active_inference.py  test_async_brain_kernel.py  test_brain_integration.py  test_evolution.py  test_lif_neuron_core.py  test_liquid_association.py  test_rl_algorithms.py  test_sleep_consolidation.py  test_smoke_all_paradigms.py  test_universal_encoder.py  test_visual_cortex.py
workspace/: diagnosis_report.json
(+417 files in other folders)
