# directory: rust_kernel
# file: Cargo.toml
# purpose: Rustカーネルの依存関係定義。Python連携と並列数値計算用クレートを追加。

[package]
name = "dora_kernel"
version = "0.1.0"
edition = "2021"

[lib]
name = "dora_kernel"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
ndarray = { version = "0.15", features = ["rayon"] } # 並列化機能を有効化
numpy = "0.20"
rayon = "1.8"